--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
   "author": "Kevin Mancera",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build:ink": "babel as-react-ink.js -o cli.js",
+    "start:ink:dev": "babel-node as-react-ink.js"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "chai": "^4.3.4",
-    "mocha": "^8.4.0"
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.9"
   },
   "dependencies": {
-    "chalk": "^4.1.1"
+    "chalk": "^4.1.1",
+    "ink": "^3.0.8",
+    "react": "^17.0.2"
   }
 }
